--- a/packages/client/src/scss/abstracts/variables/components/shared/index.scss
+++ b/packages/client/src/scss/abstracts/variables/components/shared/index.scss
@@ -1,2 +1,7 @@
 @forward "./Navbar";
 @forward "./NavbarMenu";
+@forward "./SocialMediaIcons";
+@forward "./Footer";
+@forward "./Logo";
+@forward "./PageTitle";
+@forward "./PrimaryButton";
