--- a/packages/client/src/scss/abstracts/_functions.scss
+++ b/packages/client/src/scss/abstracts/_functions.scss
@@ -4,6 +4,10 @@
   @return map-get($map: $colors, $key: $color);
 }
 
+@function getFontSize($fontSize) {
+  @return map-get($map: $fontSizes, $key: $fontSize);
+}
+
 @function getScreenSize($size) {
   @return map-get($map: $screenSizes, $key: $size);
 }
