--- a/packages/client/src/scss/abstracts/variables/components/shared/_PageTitle.scss
+++ b/packages/client/src/scss/abstracts/variables/components/shared/_PageTitle.scss
@@ -2,5 +2,4 @@
 
 $pageTitleHeight: 54rem;
 $pageTitleBackgroundImageUrl: "https://res.cloudinary.com/birthdayreminder/image/upload/v1709133342/VitalPrep/wallpaperflare_1_qmx5uv.png";
-$titleOutlinePozitiveCoeficient: 1.75px;
-$titleOutlineNegativeCoeficient: -1.75px;
+$pageTitleHeaderMarginBottom: 12rem;
