--- a/packages/client/src/scss/components/shared/Footer.module.scss
+++ b/packages/client/src/scss/components/shared/Footer.module.scss
@@ -31,12 +31,22 @@
 .footerPageLink {
   @include flexCenter(row);
   text-decoration: none;
+  width: 100%;
+  height: 100%;
 
   p {
+    transition:
+      transform 0.135s linear,
+      color 0.135s linear;
     width: 100%;
     height: 100%;
     color: getColor("tan-color");
     @include paragraphLaptop();
+
+    &:hover {
+      transform: translateX(10px);
+      color: getColor("secondary-color-light-2.4");
+    }
   }
 }
 
@@ -45,13 +55,23 @@
   justify-content: space-between;
   width: 100%;
 
-  p,
-  span {
+  p {
     color: getColor("tan-color");
     @include paragraphLaptop();
+
+    transition:
+      transform 0.135s linear,
+      color 0.135s linear;
+
+    &:hover {
+      transform: translateX(5px);
+    }
   }
 
   span {
+    color: getColor("tan-color");
+    @include paragraphLaptop();
+
     margin-left: $footerDistanceBetweenContactInfoSections;
     color: getColor("secondary-color-light-2.4");
   }
