--- a/packages/client/src/scss/components/shared/NavbarMenu.module.scss
+++ b/packages/client/src/scss/components/shared/NavbarMenu.module.scss
@@ -5,8 +5,14 @@
   width: $navbarMenuDimensions;
   height: $navbarMenuDimensions;
   color: $navbarMenuColor;
+  transition: transform 0.135s linear;
+
   svg {
     width: 100%;
     height: 100%;
+  }
+
+  &:hover {
+    transform: rotate(90deg);
   }
 }
