--- a/packages/client/src/scss/components/shared/SocialMediaIcons.module.scss
+++ b/packages/client/src/scss/components/shared/SocialMediaIcons.module.scss
@@ -12,6 +12,11 @@
   width: $socialMediaIconDimensions;
   height: $socialMediaIconDimensions;
   text-decoration: none;
+  transition: transform 0.135s linear;
+
+  &:hover {
+    transform: scale(1.25);
+  }
 
   .img {
     width: 100%;
