--- a/packages/client/src/scss/abstracts/variables/_general.scss
+++ b/packages/client/src/scss/abstracts/variables/_general.scss
@@ -33,6 +33,9 @@ $fontSizes: (
   "h1-laptop": 119px,
   "h2-laptop": 88.4px,
   "h3-laptop": 66.3px,
+  "h4-laptop": 49.7px,
+  "h5-laptop": 37.3px,
+  "h6-laptop": 28px,
 );
 
 $screenSizes: (
