Polished the Sidebar Component.

--- a/packages/client/src/scss/abstracts/variables/_general.scss
+++ b/packages/client/src/scss/abstracts/variables/_general.scss
@@ -51,3 +51,5 @@ $screenSizes: (
 
 $titleOutlinePozitiveCoeficient: 1.5px;
 $titleOutlineNegativeCoeficient: -1.5px;
+
+$crispyTransformTransition: transform 0.135s linear;
