--- a/packages/client/src/scss/components/shared/Footer.module.scss
+++ b/packages/client/src/scss/components/shared/Footer.module.scss
@@ -36,7 +36,7 @@
 
   p {
     transition:
-      transform 0.135s linear,
+      $crispyTransformTransition,
       color 0.135s linear;
     width: 100%;
     height: 100%;
@@ -60,7 +60,7 @@
     @include paragraphLaptop();
 
     transition:
-      transform 0.135s linear,
+      $crispyTransformTransition,
       color 0.135s linear;
 
     &:hover {
