Started working on the Signup/Login pages.

--- a/packages/client/src/scss/abstracts/variables/components/shared/index.scss
+++ b/packages/client/src/scss/abstracts/variables/components/shared/index.scss
@@ -6,3 +6,6 @@
 @forward "./PageTitle";
 @forward "./PrimaryButton";
 @forward "./Sidebar";
+@forward "./AuthFormPageTemplate";
+@forward "./OAuthOptions";
+@forward "./OAuthOptions";
