--- a/packages/client/src/scss/abstracts/globals.scss
+++ b/packages/client/src/scss/abstracts/globals.scss
@@ -1,11 +1,20 @@
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
   font-family: "Cabin", sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
 }
 
 html {
+  width: 100%;
+  height: 100%;
+}
+
+body {
   width: 100%;
   height: 100%;
 }
@@ -19,6 +28,5 @@ html {
   position: relative;
 
   width: 100%;
-  height: 100%;
   min-height: 100vh;
 }
