Polished Signup/Login Pages.

--- a/packages/client/src/scss/abstracts/variables/components/shared/_OAuthOptions.scss
+++ b/packages/client/src/scss/abstracts/variables/components/shared/_OAuthOptions.scss
@@ -1,5 +1,5 @@
 @use "../../general" as *;
 $authContainerDistanceBetweenItems: 0.5rem;
-$authContainerParagraphFontSize: 20px;
+$authContainerParagraphFontSize: 18px;
 $authButtonMaxWidth: 320px;
-$authButtonPadding: 0.5rem;
+$authButtonPadding: 0.35rem 0.5rem;
