--- a/packages/client/src/scss/abstracts/globals.scss
+++ b/packages/client/src/scss/abstracts/globals.scss
@@ -9,6 +9,14 @@ button {
   cursor: pointer;
 }
 
+button:focus-visible {
+  outline: 2.5px solid #ff3300;
+}
+
+input:focus-visible {
+  outline: 2.5px solid #ff3300;
+}
+
 html {
   width: 100%;
   height: 100%;
