--- a/packages/client/src/scss/components/others/FormControls.module.scss
+++ b/packages/client/src/scss/components/others/FormControls.module.scss
@@ -4,9 +4,9 @@
   @include flexCenter(column);
   align-items: flex-start;
   width: 100%;
+  gap: 8px;
 
   label {
-    font-family: "EB Garamond", serif;
     font-weight: bolder;
     font-size: 22px;
   }
@@ -32,7 +32,6 @@
     gap: 8px;
 
     span {
-      font-family: "EB Garamond", serif;
       font-weight: bolder;
       font-size: 22px;
     }
@@ -56,6 +55,10 @@
     height: 100%;
     border-radius: 50%;
   }
+}
+
+.imageInputContainer:focus-visible {
+  outline: 2.5px solid getColor("error-color");
 }
 
 .imageInputOverlay {
@@ -90,7 +93,6 @@
   width: 100%;
 
   label {
-    font-family: "EB Garamond", serif;
     font-weight: bolder;
     font-size: 22px;
   }
