--- a/packages/client/src/scss/components/others/FormControls.module.scss
+++ b/packages/client/src/scss/components/others/FormControls.module.scss
@@ -46,14 +46,12 @@
 .imageInputContainer {
   @include flexCenter(row);
   position: relative;
-  border-radius: 50%;
-  width: 30%;
-  border: 1.5px solid getColor("black-100-1");
+  width: 100px;
+  height: 100px;
 
   img {
     width: 100%;
     height: 100%;
-    border-radius: 50%;
   }
 }
 
@@ -67,7 +65,6 @@
   opacity: 0;
   width: 100%;
   height: 100%;
-  border-radius: 50%;
   background-color: rgba($color: getColor("black-100-1"), $alpha: 0.5);
   transition: opacity 0.135s linear;
 
@@ -77,6 +74,7 @@
 
   svg {
     font-size: 2rem;
+    color: getColor("tan-color-extra-light");
   }
 
   input {
