--- a/packages/client/src/scss/components/others/FormControls.module.scss
+++ b/packages/client/src/scss/components/others/FormControls.module.scss
@@ -17,7 +17,9 @@
     width: 100%;
     height: 24px;
     font-size: 1rem;
-    padding: 0;
+    padding: 0.5rem;
+    font-weight: 550;
+    word-wrap: break-word;
   }
 }
 
