--- a/packages/client/src/scss/components/shared/AuthFormPageTemplate.module.scss
+++ b/packages/client/src/scss/components/shared/AuthFormPageTemplate.module.scss
@@ -53,11 +53,31 @@
 
   gap: $authFormPageTemplateFormContentGap;
 
-  h4 {
-    @include h4Laptop();
-    letter-spacing: 3.5px;
-    color: getColor("black-100-1");
-    padding: 0;
-    margin: 0;
+  header {
+    @include flexCenter(column);
+    gap: 8px;
+
+    h4 {
+      @include h4Laptop();
+      letter-spacing: 3.5px;
+      color: getColor("black-100-1");
+    }
+
+    h5 {
+      font-size: 16px;
+      letter-spacing: 0.5px;
+      color: getColor("black-100-1");
+    }
+
+    a {
+      font-size: 20px;
+      text-decoration: none;
+      color: getColor("secondary-color-light-2.4");
+
+      &:hover {
+        font-style: italic;
+        text-decoration: underline;
+      }
+    }
   }
 }
