Integrated reCAPTCHA and also polished the Signup/Login Forms a bit.

--- a/packages/client/src/scss/abstracts/variables/_general.scss
+++ b/packages/client/src/scss/abstracts/variables/_general.scss
@@ -17,6 +17,7 @@ $colors: (
   "secondary-color-light-2.4": #646aff,
   "silver-0": #c0c0c0,
   "tan-color": #d2b48c,
+  "tan-color-dark": #867156,
   "tan-color-light": #cfbea7,
   "tan-color-extra-light": #ddd9d5,
   "error-color": #ff3300,
