--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -1,9 +1,35 @@
 @use "../../abstracts" as *;
 
 .ingredientComponent {
-  @include flexCenter(column);
+  @include flexCenter(row);
+  width: 100%;
+  height: 80px;
+  background-color: getColor("primary-1");
+}
+
+.ingredientComponentHeader {
+  @include flexCenter(row);
+  justify-content: flex-start;
+  margin-right: auto;
+  min-width: 30%;
+  gap: 1rem;
+
+  img {
+    height: 100%;
+  }
+
+  h4 {
+    font-size: 24px;
+    color: getColor("tan-color-extra-light");
+  }
+}
+
+.ingredientComponentDetails {
+  @include flexCenter(row);
+  justify-content: flex-end;
+  gap: 2rem;
+  color: getColor("tan-color-extra-light");
   width: 100%;
   height: 100%;
-  border: 2px solid black;
-  background-color: getColor("primary-1");
+  margin-right: 2rem;
 }
