Worked a bit more on the EntityComponent. Started working on the Multi-View Page.

--- a/packages/client/src/scss/abstracts/globals.scss
+++ b/packages/client/src/scss/abstracts/globals.scss
@@ -21,6 +21,10 @@ textarea:focus-visible {
   outline: 2.5px solid #ff3300;
 }
 
+select:focus-visible {
+  outline: 2.5px solid #ff3300;
+}
+
 html {
   width: 100%;
   height: 100%;
