--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -3,8 +3,15 @@
 .entityComponent {
   @include flexCenter(row);
   width: 100%;
-  height: 80px;
+  height: 100%;
   background-color: getColor("primary-1");
+}
+
+.entityComponentLinkWrapper {
+  @include flexCenter(row);
+  width: 100%;
+  height: 80px;
+  text-decoration: none;
 }
 
 .entityComponentHeader {
