--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -3,15 +3,16 @@
 .entityComponent {
   @include flexCenter(row);
   width: 100%;
-  height: 100%;
+  min-height: 8rem;
+  height: 8rem;
   background-color: getColor("primary-1");
 }
 
 .entityComponentLinkWrapper {
   @include flexCenter(row);
   width: 100%;
-  height: 80px;
   text-decoration: none;
+  border: 1px solid black;
 }
 
 .entityComponentHeader {
@@ -20,9 +21,12 @@
   margin-right: auto;
   min-width: 30%;
   gap: 1rem;
+  height: 100%;
+  width: fit-content;
 
   img {
     height: 100%;
+    width: auto;
   }
 
   h4 {
