Developed the NotificationSettings section. Finished developing the Settings Page.

--- a/packages/client/src/scss/pages/Settings.module.scss
+++ b/packages/client/src/scss/pages/Settings.module.scss
@@ -34,11 +34,13 @@
 
 .accountSettingsForm {
   @include flexCenter(column);
+  align-items: flex-start;
   width: 100%;
   padding: 4rem 12rem;
   gap: 2rem;
 
   button {
-    margin-top: 1rem;
+    margin-top: 2rem;
+    align-self: center;
   }
 }
