--- a/packages/client/src/scss/components/others/FormControls.module.scss
+++ b/packages/client/src/scss/components/others/FormControls.module.scss
@@ -102,6 +102,7 @@
   @include flexCenter(row);
   justify-content: space-between;
   width: 100%;
+  max-width: 400px;
 
   padding: 1rem;
   border: 1.5px solid getColor("black-100-1");
