--- a/packages/client/src/scss/pages/CreateTool.module.scss
+++ b/packages/client/src/scss/pages/CreateTool.module.scss
@@ -34,12 +34,14 @@
 
 .createInterfaceForm {
   @include flexCenter(column);
+  align-items: flex-start;
   width: 100%;
   gap: 48px;
   padding: 0px 400px;
 
   button {
     margin-top: 64px;
+    align-self: center;
   }
 }
 
