Finished developing the RadioFormControl. Finished developing the NotificationSettings section.

--- a/packages/client/src/scss/components/others/FormControls.module.scss
+++ b/packages/client/src/scss/components/others/FormControls.module.scss
@@ -239,3 +239,62 @@
     }
   }
 }
+
+.radioFormControlContainer {
+  @include flexCenter(column);
+  border: 2px solid black;
+  align-items: flex-start;
+  width: 100%;
+  gap: 1rem;
+
+  label {
+    font-weight: bolder;
+    font-size: 22px;
+  }
+
+  input {
+    background-color: getColor("tan-color");
+    border: 1.5px solid getColor("black-100-1");
+    width: 100%;
+    max-width: 400px;
+    height: 24px;
+    font-size: 1rem;
+    padding: 0.5rem;
+    font-weight: 550;
+    word-wrap: break-word;
+    transition: background-color 0.135s linear;
+
+    &:hover {
+      background-color: getColor("tan-color-dark");
+    }
+  }
+}
+
+.radioFormControlContent {
+  @include flexCenter(row);
+  list-style: none;
+  gap: 2rem;
+
+  li {
+    @include flexCenter(row);
+    gap: 1rem;
+
+    input[type="radio"] {
+      appearance: none;
+      width: 2rem;
+      height: 2rem;
+      border: 1.5px solid getColor("black-100-1");
+      border-radius: 100%;
+
+      &:checked {
+        background-color: #646aff;
+      }
+    }
+
+    label {
+      font-size: 22px;
+      color: getColor("tan-color-extra-light");
+      letter-spacing: 1px;
+    }
+  }
+}
