Refactored some code.

--- a/packages/client/src/scss/components/page/HomeCards.module.scss
+++ b/packages/client/src/scss/components/page/HomeCards.module.scss
@@ -30,7 +30,7 @@
 
   p {
     width: 100%;
-    font-size: $homeCardContainerInformationFontSize;
+    font-size: 2rem;
     text-align: center;
     font-family: "EB Garamond", serif;
     color: getColor("tan-color-extra-light");
