Refactored some more code.

--- a/packages/client/src/scss/pages/CreateTool.module.scss
+++ b/packages/client/src/scss/pages/CreateTool.module.scss
@@ -61,6 +61,7 @@
 
 .createInterfaceRecipeTutorialCheckboxes {
   @include flexCenter(column);
+  align-items: flex-start;
   width: 100%;
   padding-left: 64px;
   gap: 32px;
