--- a/packages/client/src/scss/components/shared/PrimaryButton.module.scss
+++ b/packages/client/src/scss/components/shared/PrimaryButton.module.scss
@@ -7,6 +7,7 @@
   font-size: $primaryButtonInitialFontSize;
   font-family: $primaryButtonInitialFontFamily;
   color: $primaryButtonInitialColor;
+  font-weight: 400;
   letter-spacing: 1.5px;
   border: 1.5px solid getColor("black-100-1");
   transition: $crispyTransformTransition;
