--- a/packages/client/src/scss/components/others/FormControls.module.scss
+++ b/packages/client/src/scss/components/others/FormControls.module.scss
@@ -298,3 +298,46 @@
     }
   }
 }
+
+.weekdayFormControlContainer {
+  @include flexCenter(column);
+  width: 100%;
+  align-items: flex-start;
+  gap: 1.5rem;
+
+  label {
+    font-size: 2rem;
+    font-weight: bolder;
+    color: getColor("tan-color-extra-light");
+  }
+}
+
+.weekdayFormControlList {
+  @include flexCenter(row);
+  list-style: none;
+  justify-content: flex-start;
+  width: 100%;
+  gap: 2.5rem;
+
+  li {
+    @include flexCenter(row);
+    justify-content: flex-start;
+    position: relative;
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 0.5rem;
+
+    img {
+      transition:
+        $crispyTransformTransition,
+        border 0.2s linear;
+      width: 100%;
+      height: 100%;
+      border-radius: 0.5rem;
+
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+  }
+}
